<resources>
    <string name="app_name">CIDCO TankerAllocation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_label">Sign In</string>
    <string name="emailadd">Email address</string>
    <string name="pass">Password</string>
    <string name="login">Sign In</string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="tanker_num">Tanker Number</string>
    <string name="driver_mob_num">Driver Mobile Number</string>
    <string name="driver_name">Driver Name</string>
    <string name="ok_txt">Okay</string>
    <string name="empty_field_error">Please make sure you\'ve entered all fields</string>
    <string name="app_for_txt">Tanker Allocation</string>
    <string name="send_link_txt">update</string>
    <string name="upload_photo">Upload Tanker Photo</string>
    <string name="next">Next</string>
    <string name="Deliverd">Deliverd</string>
    <string name="token_no">Token No</string>
    <string name="tanker_no">Tanker No</string>
    <string name="driver_no">Driver Mobile No:</string>
    <string name="status">Status:</string>
    <string name="tankerallocaltion">Allocation List</string>
    <string name="generatepdf">Generate Delivery Note</string>
    <string name="Cust_name">Consumer Name</string>
    <string name="buil_name">Society Name</string>
    <string name="adrress">Sector</string>
    <string name="plotno">Address</string>
    <string name="quantity">Quantity</string>
    <string name="Approvedby">Approved By</string>
    <string name="zone">Node</string>
    <string name="deliverydate">Delivery Date</string>
    <string name="uploaddelivery_note">Upload Delivery Note</string>
    <string name="deliverynote">Delivery Note</string>
    <string name="viewdeliverynote">View Delivery Note</string>
    <string name="Cust_mobileno">Consumer Mobile No</string>
    <string name="consumerno">Consumer No</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="passwordchange">Password Mismatch</string>
    <string name="viewdetails">View Details</string>
    <string name="print">Print</string>
    <string name="home">Home</string>
    <string name="fillingstation">Tanker Filling Location</string>
    <string name="submit">Submit</string>
</resources>