<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/sweet_white"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/sweet_white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/backgroud_viewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/card_token_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_toker_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/token_no"
                    android:textColor="@color/stellar_explorer" />

                <TextView
                    android:id="@+id/val_token_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/stellar_explorer" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_tanker_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_token_no"
                android:layout_margin="10dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_tanker_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/tanker_no"
                    android:textColor="@color/stellar_explorer" />

                <TextView
                    android:id="@+id/val_tanker_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/stellar_explorer" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_driver_mob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_tanker_no"
                android:layout_margin="10dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_driverno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/driver_no"
                    android:textColor="@color/stellar_explorer" />

                <TextView
                    android:id="@+id/val_driverno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/stellar_explorer" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/StatusWrap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_driver_mob"
                android:layout_margin="10dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/status"
                    android:textColor="@color/stellar_explorer" />

                <TextView
                    android:id="@+id/statusval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/stellar_explorer" />

            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>


